@@ -9,7 +9,7 @@ DSHCONFIG_SONAME = 0:0:0
 
 lib_LTLIBRARIES = libdshconfig.la
 libdshconfig_la_LDFLAGS = -export-dynamic -version-info $(DSHCONFIG_SONAME)
-include_INCLUDE = libdshconfig.h
+include_HEADERS = libdshconfig.h
 test_dshconfig_SOURCES = test-dshconfig.c
 test_dshconfig_LDADD = libdshconfig.la
 
