@@ -17,8 +17,7 @@ configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-	echo "#define DSH_VERSION \"${PACKAGE_VERSION}\" " > dshversion.h 
-
+	./configure -prefix=/usr
 	touch configure-stamp
 
 build: configure-stamp build-stamp
@@ -31,7 +30,8 @@ clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp configure-stamp
-	-$(MAKE) clean
+	rm -rf $(DSH)
+	-$(MAKE) distclean
 	dh_clean
 
 install: build
@@ -59,7 +59,6 @@ binary-arch: build install
 	dh_installdocs
 	dh_installexamples
 	dh_installmenu
-	dh_installman dsh.1
 	dh_installchangelogs
 	dh_link
 	dh_strip
